<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/et_main_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/welcome_greeting"/>

    <LinearLayout android:id="@+id/main_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_main_greeting"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <Button android:id="@+id/button_login"
            android:layout_width="@dimen/big_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_text"/>

        <Button android:id="@+id/button_register"
            android:layout_width="@dimen/big_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_text"/>
    </LinearLayout>

</RelativeLayout>